CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(perlin)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/..")

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "-Wall -std=c++0x")
ENDIF()

# Build source list with enabled components
SET(PERLIN_FILES Perlin.cpp)

# Build library
ADD_LIBRARY(perlin ${PERLIN_FILES})

# Test binary
OPTION(PERLIN_TEST_PROGRAM "Build the test program for Perlin noise" OFF)
IF(PERLIN_TEST_PROGRAM)
    FIND_PACKAGE(Qt4 REQUIRED)

    SET(PERLIN_TEST_FILES test.cpp)
    SET(PERLIN_TEST_HEADERS test.h)
    QT4_WRAP_CPP(PERLIN_TEST_HEADERS_MOC ${PERLIN_TEST_HEADERS})

    INCLUDE(${QT_USE_FILE})
    ADD_DEFINITIONS(${QT_DEFINITIONS})

    ADD_EXECUTABLE(test_perlin ${PERLIN_TEST_FILES} ${PERLIN_TEST_HEADERS_MOC})
    TARGET_LINK_LIBRARIES(test_perlin perlin ${QT_LIBRARIES})
ENDIF()
